# NEAT

./: .gitignore  CMakeLists.txt
Game_Base/: CController.cpp  CController.h  CInnovation.cpp  CInnovation.h  CParams.cpp  CParams.h  CTimer.h  Cga.cpp  Cga.h  Game.h  HumanPlayer.cpp  HumanPlayer.h  Invader.cpp  Invader.h  NEATPlayer.cpp  NEATPlayer.h  Player.cpp  Player.h  genes.h  genotype.cpp  genotype.h  main.cpp  maths.h  phenotype.cpp  phenotype.h
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: levelsystem.cpp  levelsystem.h
res/levels/: box.txt  double_stripe.txt  double_stripe2.txt  double_stripe3.txt  double_stripe4.txt  double_stripe5.txt  double_stripe7.txt  mirror_stripe.txt  new_double_stripe (2).txt  new_mirror_stripe.txt  new_stripe.txt  stripe.txt  training_box.txt  vert.txt
